<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CV Jean-Michel FAHYS</string>
    <string name="title_section1">Présentation</string>
    <string name="title_section2">Expérience</string>
    <string name="title_section3">Compétence</string>
    <string name="title_section4">Formation</string>
    <string name="title_section5">Loisir</string>
    <string name="action_addme">M\'ajouter comme contact</string>
    <string name="action_addme_text">Voulez-vous m\'ajouter parmi vos contacts ?</string>
    <string name="action_addme_success">Ajout réussi</string>
    <string name="action_addme_error">Echec lors de l\'ajout</string>
    <string name="annuler">Annuler</string>
    <string name="action_about">A propos</string>
    <string name="action_addme_prenom">Jean-Michel</string>
    <string name="action_addme_nom">Fahys</string>
    <string name="action_addme_email">cv@jeanmichelfahys.net</string>
    <string name="action_addme_profession">Ingénieur d\'études sénior</string>
    <string name="action_about_texte">Cette application a été conçue dans le but d\'améliorer mes compétences en développement Android de bout en bout. Comme mon CV l\'indique, ce n\'est pas ma première application Android, mais c\'est la première que je publie.\nLes sources de cette application sont disponibles sur mon espace Github.</string>
    <string name="url_section1">http://www.jeanmichelfahys.net/android/presentation.php</string>
    <string name="url_section2">http://www.jeanmichelfahys.net/android/jobs.php</string>
    <string name="url_section3">http://www.jeanmichelfahys.net/android/skills.php</string>
    <string name="url_section4">http://www.jeanmichelfahys.net/android/trainings.php</string>
    <string name="url_section5">http://www.jeanmichelfahys.net/android/hobbies.php</string>
    <string name="home_age">ans</string>
    <string name="home_permis">Permis de conduire</string>
    <string name="home_situation_maritale">Célibataire</string>
    <string name="home_presentation_title">En quelques mots</string>
    <string name="home_presentation">Après des études d\'informatiques, j\'ai été recruté par une puis deux Sociétés de Services en Ingénierie Informatique ce qui m\'a permis d\'exploiter et approfondir mes compétences.\nDisposant maintenant d\'une expérience significative, je suis à la recherche d\'opportunités permettant de m\'épanouir pleinement, sur des projets à plus long terme.</string>
    <string name="home_lien_title">Sur le web</string>
    <string name="home_github">&lt;a href="https://github.com/JeanMichelF">Github&lt;/a></string>
    <string name="home_github_url">https://github.com/JeanMichelF</string>
    <!-- <u> is a trick to make email like a link in Android < ICS (it's handled by an intent in those versions, ICS use autoLink -->
    <string name="home_email"><u>cv@jeanmichelfahys.net</u></string>
    <string name="home_title_situation_professionnelle">Situation professionnelle</string>
    <string name="home_situation_professionnelle">En poste</string>
    <string name="home_situation_carriere">Ouvert aux opportunités</string>
    <string name="home_city">Bordeaux</string>
    <string name="error_email_app_absent">Veuillez installer un client mail.</string>
</resources>
